k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: content-platform
  namespace: cloud-devops
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: content-platform
  template:
    metadata:
      labels:
        app: content-platform
    spec:
      containers:
        - name: app
          image: ghcr.io/lamabso/projet-cloud-devops-bemathis:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080

          readinessProbe:
            httpGet:
              path: /readyz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 20

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
