k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: content-platform-svc
  namespace: cloud-devops
spec:
  selector:
    app: content-platform
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
